Исправлено с JPA на JDBC. Исправлено с Postgres на H2